cards for transactions and accounts

--- a/app/views/tabs/accounts/accounts.component.android.html
+++ b/app/views/tabs/accounts/accounts.component.android.html
@@ -1,19 +1,21 @@
 <RadListView #radListView [items]="accounts" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)" separatorColor="transparent">
     <ng-template let-item="item" let-i="index">
         <StackLayout>
-            <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, *, auto, auto" rows="auto, auto, auto, auto">
-                <Label col="0" row="0" colspan="4" [text]="item.address"></Label>
-                <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
-                <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
+            <CardView class="account-card" margin="10" elevation="5" radius="2">
+                <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, *, auto, auto" rows="auto, auto, auto, auto">
+                    <Label col="0" row="0" colspan="4" [text]="item.address"></Label>
+                    <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
+                    <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
 
-                <Label col="0" row="2" colspan="4" class="text-left" [text]="('TABS.ACCOUNTS.BALANCE' | translate) + ': ' + item.balance + ' BURST'"></Label>
-                <Label col="0" row="3" colspan="4" class="text-left fa" [text]="marketService.getPriceBTC(item.balance) + ' &#xf0ec; ' + marketService.getPriceFiatCurrency(item.balance)"></Label>
+                    <Label col="0" row="2" colspan="4" class="text-left vertical-bottom" [text]="('TABS.ACCOUNTS.BALANCE' | translate) + ': ' + item.balance + ' BURST'"></Label>
+                    <Label col="0" row="3" colspan="4" class="text-left fa vertical-bottom" [text]="marketService.getPriceBTC(item.balance) + ' &#xf0ec; ' + marketService.getPriceFiatCurrency(item.balance)"></Label>
 
-                <Label *ngIf="item.keys != undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
-                <Label *ngIf="item.keys == undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
+                    <Label *ngIf="item.keys != undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
+                    <Label *ngIf="item.keys == undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
 
-                <Button col="5" row="2" rowspan="2" style="margin: 2" class="btn btn-primary btn-active icon-button fa text-center" text="&#xf00d;" (tap)="onTapRemoveAccount(item)"></Button>
-            </GridLayout>
+                    <Button col="5" row="2" rowspan="2" class="btn btn-primary btn-active icon-button fa text-center vertical-bottom" text="&#xf00d;" (tap)="onTapRemoveAccount(item)"></Button>
+                </GridLayout>
+            </CardView>
             <Button *ngIf="i == accounts.length - 1" class="btn btn-primary btn-active icon-button fa text-center" text="&#xf067;" (tap)="onTapAddAccount()"></Button>
         </StackLayout>
     </ng-template>
