--- a/app/views/tabs/balance/balance.component.android.html
+++ b/app/views/tabs/balance/balance.component.android.html
@@ -1,19 +1,21 @@
 <RadListView #radListView [items]="[0]" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)">
     <ng-template tkListItemTemplate let-item="item" let-i="index">
         <StackLayout orientation="vertical">
-            <StackLayout (doubleTap)="onDoubleTapBalance()" (longPress)="onLongPressBalance()" (swipe)="onSwipeBalance($event)" class="balance-container" orientation="vertical">
-                <Image *ngIf="loading == false" class="qrcode" [src]="qrcode"></Image>
-                <StackLayout *ngIf="loading" class="p-30" orientation="vertical">
-                    <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+            <CardView class="balance-card" elevation="5" radius="3">
+                <StackLayout (doubleTap)="onDoubleTapBalance()" (longPress)="onLongPressBalance()" (swipe)="onSwipeBalance($event)" class="balance-container" orientation="vertical">
+                    <Image *ngIf="loading == false" class="qrcode" [src]="qrcode"></Image>
+                    <StackLayout *ngIf="loading" class="p-30" orientation="vertical">
+                        <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+                    </StackLayout>
+                    <StackLayout class="hr-light"></StackLayout>
+                    <Label class="font-weight-bold p-t-10 p-b-10" [text]="address"></Label>
+                    <StackLayout class="hr-light"></StackLayout>
+                    <Label *ngIf="confirmed" class="font-weight-bold p-t-10 p-b-10" [text]="('TABS.BALANCE.BALANCE' | translate) + ': ' + balance"></Label>
+                    <Label *ngIf="!confirmed" class="font-weight-bold p-t-10 p-b-10 fa" [text]="'Balance: ' + balance + ' &#xf021;'"></Label>
+                    <StackLayout class="hr-light"></StackLayout>
+                    <Label class="font-weight-bold text-center fa p-t-10 p-b-10" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
                 </StackLayout>
-                <StackLayout class="hr-light"></StackLayout>
-                <Label class="font-weight-bold p-t-10 p-b-10" [text]="address"></Label>
-                <StackLayout class="hr-light"></StackLayout>
-                <Label *ngIf="confirmed" class="font-weight-bold p-t-10 p-b-10" [text]="('TABS.BALANCE.BALANCE' | translate) + ': ' + balance"></Label>
-                <Label *ngIf="!confirmed" class="font-weight-bold p-t-10 p-b-10 fa" [text]="'Balance: ' + balance + ' &#xf021;'"></Label>
-                <StackLayout class="hr-light"></StackLayout>
-                <Label class="font-weight-bold text-center fa p-t-10 p-b-10" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
-            </StackLayout>
+            </CardView>
             <StackLayout orientation="vertical">
                 <Button *ngIf="account?.keys != undefined" class="btn btn-primary btn-active action-button fa" [text]="('TABS.BALANCE.SEND' | translate) + ' &#xf08b;'" [nsRouterLink]="['/send']"></Button>
                 <Button *ngIf="account?.keys == undefined" class="btn btn-primary btn-active action-button fa" [text]="('TABS.BALANCE.ACTIVATE' | translate) + ' &#xf05d;'" [nsRouterLink]="['/activate']"></Button>
