calculateTotal fix, routing fix

--- a/app/views/tabs/tabs.component.android.scss
+++ b/app/views/tabs/tabs.component.android.scss
@@ -9,6 +9,9 @@ TabView {
     font-size: 10;
 }
 
+.action-bar {
+    background-color: transparent;
+}
 
 .tab-view-item {
     background-color: $background-light;
