--- a/app/views/tabs/balance/balance.component.android.html
+++ b/app/views/tabs/balance/balance.component.android.html
@@ -10,10 +10,9 @@
                     <StackLayout class="hr-light"></StackLayout>
                     <Label class="font-weight-bold p-t-10 p-b-10" [text]="address"></Label>
                     <StackLayout class="hr-light"></StackLayout>
-                    <Label *ngIf="confirmed" class="font-weight-bold p-t-10 p-b-10" [text]="('TABS.BALANCE.BALANCE' | translate) + ': ' + balance"></Label>
-                    <Label *ngIf="!confirmed" class="font-weight-bold p-t-10 p-b-10 fa" [text]="'Balance: ' + balance + ' &#xf021;'"></Label>
+                    <Label class="font-weight-bold p-t-10 p-b-10" [ngClass]="{'unconfirmed': !confirmed}" [text]="('TABS.BALANCE.BALANCE' | translate) + ': ' + balance"></Label>
                     <StackLayout class="hr-light"></StackLayout>
-                    <Label class="font-weight-bold text-center fa p-t-10 p-b-10" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
+                    <Label class="font-weight-bold text-center fa p-t-10 p-b-10" [ngClass]="{'unconfirmed': !confirmed}" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
                 </StackLayout>
             </CardView>
             <StackLayout orientation="vertical">
