--- a/app/views/tabs/settings/currency/currency.component.html
+++ b/app/views/tabs/settings/currency/currency.component.html
@@ -3,7 +3,7 @@
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
                 <Label class="solo fa" textWrap="true" [text]="'&#xf0d6; ' + ('TABS.SETTINGS.CURRENCY.CURRENCY' | translate)"></Label>
-                <ListPicker [items]="currencies" [selectedIndex]="index" (selectedIndexChange)="selectedIndexChanged($event)" class="p-5"></ListPicker>
+                <ListPicker [items]="currencyCodes" [selectedIndex]="index" (selectedIndexChange)="selectedIndexChanged($event)" class="p-5"></ListPicker>
                 <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
             </StackLayout>
         </StackLayout>
