--- a/app/views/send/input/input.component.android.html
+++ b/app/views/send/input/input.component.android.html
@@ -18,10 +18,9 @@
         <StackLayout class="container">
             <StackLayout class="body-container" orientation="vertical">
                 <Label class="font-italic huge-label" [text]="('SEND.BALANCE' | translate) + ': ' + balance"></Label>
-                <GridLayout columns="*, auto, auto, auto, *" rows="auto">
+                <GridLayout columns="*, auto, auto, *" rows="auto">
                     <Button col="1" style="margin-right: 0px" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf2b9;" (tap)=onTapContacts($event)></Button>
                     <Button col="2" style="margin-left: 0px; margin-right: 0px" [class.selected]="messageEnabled" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf0e0;" (tap)=onTapMessage($event)></Button>
-                    <Button col="3" style="margin-left: 0px" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
                 <GridLayout class="text-left m-t-10" columns="auto, 4*, auto, 4*, auto, 4*, auto, 5*" rows="auto, auto">
